Implement fully functional voice assistant with customizable wake word
Features:
- Continuous wake word detection (like Hey Google/Alexa)
- Customizable wake word - user can choose any name
- Complete hands-free phone control
- Opens apps, makes calls, sends messages by voice
- Modern UI with wake word customization
- Comprehensive documentation (QUICKSTART, SETUP_GUIDE, USER_GUIDE)
- Python backend server for advanced NLU
- One-click build and deploy script

New Components:
- WakeWordDetector.kt - Continuous listening and detection
- VaaniService.kt - Main orchestration service
- MainActivityNew.kt - Settings UI with wake word setup
- activity_main_new.xml - Modern card-based layout
- vaani_backend_server.py - Python backend for advanced features

Documentation:
- IMPLEMENTATION_COMPLETE.md - Full implementation details
- QUICKSTART.md - 5-minute getting started
- SETUP_GUIDE.md - Complete installation guide
- USER_GUIDE.md - User manual with all commands
- quick_build_and_install.bat - Build automation

The app now works like commercial voice assistants but with full customization and privacy!

--- a/android/vaani_phone_app/app/src/main/AndroidManifest.xml
+++ b/android/vaani_phone_app/app/src/main/AndroidManifest.xml
@@ -43,10 +43,24 @@
             android:exported="false"
             android:screenOrientation="portrait">
         </activity>
+        
+        <!-- New Main Activity with Wake Word Setup -->
+        <activity
+            android:name=".MainActivityNew"
+            android:exported="false"
+            android:screenOrientation="portrait">
+        </activity>
 
         <!-- Voice Service (Foreground Service) -->
         <service
             android:name=".VaaniVoiceService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="microphone" />
+            
+        <!-- New Vaani Service with Wake Word Detection -->
+        <service
+            android:name=".VaaniService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="microphone" />
