--- a/vaani_voice_app/gradle/wrapper/gradle-wrapper.properties
+++ b/vaani_voice_app/gradle/wrapper/gradle-wrapper.properties
@@ -1,1 +1,2 @@
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
+#Thu Dec 04 19:14:06 IST 2025
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
